<resources>
    <string name="app_name">Project 1</string>
    <string name="view_web_page">View web page</string>
    <string name="share_location">Share Location</string>
    <string name="make_call">Make call</string>
    <string name="share">share</string>
    <string name="show_menu">Show menu</string>
    <string name="title">Project 1</string>
    <string name="username">Username</string>
    <string name="email">example@example.com</string>
    <string name="sign_in">Sign in</string>
    <string name="openDrawer">Open</string>
    <string name="closeDrawer">Close</string>
    <string name="log_in">Log in</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="news">News</string>
    <string name="users">Users</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile_fragment">Profile fragment</string>
    <string name="log_out">Log out</string>
    <string name="user_profile">User Profile</string>
    <string name="news_fragment">News fragment</string>
    <string name="setting_fragment">Setting fragment</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="notification">Notification</string>
    <string name="music">Music</string>
    <string name="search">Search</string>
    <string name="benzinga_com">benzinga.com</string>
    <string name="biztoc_com">Biztoc.com</string>
    <string name="title_new">Are EVs As Clean As You Think? US Still Has A \'Dirty Grid\' Problem, But Solar Is Coming</string>
    <string name="read_more">Read more</string>
    <string name="new_image">New image</string>

</resources>