<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:theme="@style/Theme.Project1"
    android:fitsSystemWindows="true"
    android:layout_height="wrap_content">
    <com.google.android.material.imageview.ShapeableImageView
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:id="@+id/user_image"
        android:src="@drawable/hero_umg"
        app:shapeAppearanceOverlay="@style/Circular"/>
    <TextView
        android:id="@+id/tvName"
        app:layout_constraintStart_toStartOf="@id/user_image"
        app:layout_constraintTop_toBottomOf="@id/user_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textSize="14sp"
        android:layout_marginTop="10dp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/tvEmail"
        app:layout_constraintStart_toStartOf="@id/tvName"
        app:layout_constraintTop_toBottomOf="@id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="14sp"
        android:layout_marginTop="10dp"
        android:textStyle="bold" />
    <Button
        android:id="@+id/sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textStyle="bold"
        android:textSize="14sp"
        android:theme="@style/Theme.Project1"
        style="@style/Widget.Material3.Button"
        app:layout_constraintTop_toTopOf="@id/user_image"
        app:layout_constraintBottom_toBottomOf="@id/tvEmail"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>